# AgenticTrading

./: .env.example  .gitattributes  .gitignore  IDEAS.md  README.md  pyproject.toml  requirements.txt
config/: domain_knowledge.md  engine.yaml  goal.md  instructions.md  qc_instructions.md  qc_python_spec.md
engine/: cli.py  config_loader.py  llm_client.py  loop.py  run_logger.py  run_state.py  sdk_state.py
engine/agents/: experiment_agent.py  hypothesis_agent.py  reviewer_agent.py
engine/tools/: agent_memory.py  quantconnect.py  storage.py  websearch.py
memory/: experiment_agent.md  hypothesis_agent.md
